[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://GUI/SettingsMenu.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://resources/fonts/20832.ttf"

[sub_resource type="DynamicFont" id=2]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.776471 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.844
margin_top = -164.422
margin_right = 90.1557
margin_bottom = -125.422
text = "Start"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.915
margin_top = -86.3067
margin_right = 90.085
margin_bottom = -47.3067
text = "Settings"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Description" type="Label" parent="."]
modulate = Color( 0.85098, 0.85098, 0.85098, 1 )
margin_left = 34.7302
margin_top = 351.703
margin_right = 469.73
margin_bottom = 648.703
custom_fonts/font = SubResource( 2 )
text = "При выходе в главное меню прогресс не сохранятеся"
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LookAuthors" type="Button" parent="."]
margin_left = 409.216
margin_top = 575.757
margin_right = 542.216
margin_bottom = 619.757
text = "Authors"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Authors" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Authors"]
margin_left = 23.0
margin_top = 19.0
margin_right = 825.0
margin_bottom = 617.0
text = "Charecter 16x16
Copyright/Attribution Notice: 
Nothing! Do whatever! But please let me know if you publish anything with him, would love to play it :)

Town_tiles
Author: surt

food
unknow author CC0

bird
Copyright/Attribution Notice: 
Spring/Flofflewoffle Flooferwoofer

music
Soundtrack by Monplaisir Loyalty Freak Music

step sound
Author: TinyWorlds

TES 2 Daggerfall: HALT!

Spaceship 2D, feel free to use it however you like, SVG file included. If you want more graphics like this visit https://gameassets.itch.io"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Authors"]
margin_left = 848.0
margin_top = 13.0
margin_right = 939.0
margin_bottom = 58.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeviceSetup" type="Control" parent="."]
margin_left = 783.89
margin_top = 26.4737
margin_right = 857.89
margin_bottom = 76.4737
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PC" type="CheckBox" parent="DeviceSetup"]
margin_right = 24.0
margin_bottom = 24.0
text = "PC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mobile" type="CheckBox" parent="DeviceSetup"]
margin_left = 0.445435
margin_top = 23.6088
margin_right = 72.4454
margin_bottom = 47.6088
text = "Mobile"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="LookAuthors" to="." method="_on_LookAuthors_pressed"]
[connection signal="pressed" from="Authors/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="DeviceSetup/PC" to="." method="_on_PC_pressed"]
[connection signal="pressed" from="DeviceSetup/Mobile" to="." method="_on_Mobile_pressed"]
